# rdm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .yarnrc  CHANGELOG.md  README.md  eslint.config.mjs  gettext.config.js  import_lingo_example_data.py  manage.py  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  vitest.config.mts  vitest.setup.mts
.github/actions/build-and-test-branch/: action.yml
.github/workflows/: build-ci-container.yml  main.yml  rebuild-demo.yml
arches_lingo/: apps.py  celery.py  concepts.py  const.py  hosts.py  models.py  querysets.py  serializers.py  settings.py  tasks.py  test_settings.py  tests.py  urls.py  views.py  wsgi.py
arches_lingo/etl_modules/: migrate_to_lingo.py
arches_lingo/functions/: validate_appellative_status.py
arches_lingo/install/: requirements.txt
arches_lingo/migrations/: 0001_initial.py  0002_load_lingo_lists.py  0002_rdm_to_lingo_etl_module.py  0003_validate_appellative_status.py
arches_lingo/pkg/business_data/: Concept__2023-12-06_17-00-14.json  collection_rdm_system_2023-12-06_17-00-14.json  concept__rdm_system_2023-12-06_17-00-14.json  scheme_rdm_system_2023-12-06_17-00-14.json
arches_lingo/src/: App.vue
arches_lingo/src/arches_lingo/: App.vue  api.ts  constants.ts  routes.ts  types.ts  utils.ts  (+1 more)
arches_lingo/templates/: arches_urls.htm  javascript.htm
arches_lingo/utils/: concept_builder.py  query_expressions.py  querysets.py  spectacular.py
arches_lingo/views/: __init__.py  root.py  trees.py
arches_rdm/: const.py  package.json  tasks.py  test_settings.py  tests.py  urls.py  views.py
arches_rdm/app/: migrate_rdm.py
arches_rdm/etl_modules/: migrate_rdm.py  migrate_to_lingo.py
arches_rdm/migrations/: 0001_initial.py  0002_rdm_etl_module.py
arches_rdm/src/: App.vue  main.js  main.ts  types.ts  utils.ts
arches_rdm/views/: __init__.py
docker/: entrypoint.sh  env_file.env  settings_docker.py  settings_local.py
docker/deploy/: task-definition-reset-database.json  task-definition.json
docker/production/: Dockerfile  entrypoint.sh
docker/webpack/: Dockerfile  env_file.env
tests/: base_test.py  test_settings.py  tests.py
tests/data/: aat_entries_concept_examples.json  aat_entries_scheme_examples.json
tests/search_indexes/: sample_index_tests.py
webpack/: webpack.common.js
(+206 files in other folders)
